Pull up following revision(s) (requested by martin in ticket #474): 	usr.sbin/sysinst/partman.c: revision 1.57 PR 57698: avoid a few potential sysinst crashes in environments where not all binaries are available - e.g. w/o cgdconfig(8) the "cgds" pointer would be NULL (as there can't be any) and we crashed when naively dereferencing it.